--- a/MDFast/App.xaml
+++ b/MDFast/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="MDFast.App"
+﻿<Application x:Class="FiscaliZi.MDFast.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:vm="clr-namespace:MDFast.ViewModel"
+             xmlns:vm="clr-namespace:FiscaliZi.MDFast.ViewModel"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 			 xmlns:ignore="http://www.galasoft.ch/ignore"
