--- a/MDFast/MainWindow.xaml
+++ b/MDFast/MainWindow.xaml
@@ -1,10 +1,10 @@
-﻿<Controls:MetroWindow x:Class="MDFast.MainWindow"
+﻿<Controls:MetroWindow x:Class="FiscaliZi.MDFast.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
-        xmlns:Views="clr-namespace:MDFast.Views"
+        xmlns:Views="clr-namespace:FiscaliZi.MDFast.Views"
         xmlns:ignore="http://www.galasoft.ch/ignore"
         mc:Ignorable="d ignore"
         Height="600"
