--- a/MDFast/Views/ConfigVeiculos.xaml
+++ b/MDFast/Views/ConfigVeiculos.xaml
@@ -1,13 +1,13 @@
 ﻿<UserControl
-    x:Class="MDFast.Views.ConfigVeiculos"
+    x:Class="FiscaliZi.MDFast.Views.ConfigVeiculos"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:local="clr-namespace:MDFast.Views"
+             xmlns:local="clr-namespace:FiscaliZi.MDFast.Views"
              xmlns:Custom="http://metro.mahapps.com/winfx/xaml/controls"
              xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
-             xmlns:Model="clr-namespace:MDFast.Model"
-             xmlns:Design="clr-namespace:MDFast.Design"
+             xmlns:Model="clr-namespace:FiscaliZi.MDFast.Model"
+             xmlns:Design="clr-namespace:FiscaliZi.MDFast.Design"
              xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
              xmlns:Microsoft_Windows_Themes="clr-namespace:Microsoft.Windows.Themes;assembly=PresentationFramework.Aero2"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
