--- a/MDFast/Views/Entrada.xaml
+++ b/MDFast/Views/Entrada.xaml
@@ -1,5 +1,5 @@
 ﻿<UserControl 
-    x:Class="MDFast.Views.Entrada"
+    x:Class="FiscaliZi.MDFast.Views.Entrada"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
