--- a/MDFast/Views/ErrorControl.xaml
+++ b/MDFast/Views/ErrorControl.xaml
@@ -1,12 +1,12 @@
-﻿<UserControl x:Name="userControl" x:Class="MDFast.Views.ErrorControl"
+﻿<UserControl x:Name="userControl" x:Class="FiscaliZi.MDFast.Views.ErrorControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:MDFast.Views"
+             xmlns:local="clr-namespace:FiscaliZi.MDFast.Views"
              mc:Ignorable="d" 
              d:DesignHeight="35" d:DesignWidth="300"
-             xmlns:Model="clr-namespace:MDFast.Model">
+             xmlns:Model="clr-namespace:FiscaliZi.MDFast.Model">
 
     <UserControl.Resources>
         <Model:VisibleErrorListConverter x:Key="VisibleErrorList" />
