--- a/MDFast/Views/DialogMotoristas.xaml
+++ b/MDFast/Views/DialogMotoristas.xaml
@@ -1,12 +1,46 @@
-﻿<UserControl x:Class="FiscaliZi.MDFast.Views.DialogMotoristas"
+﻿<dialogs:CustomDialog x:Class="FiscaliZi.MDFast.Views.DialogMotoristas"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:dialogs="clr-namespace:MahApps.Metro.Controls.Dialogs;assembly=MahApps.Metro"
+             xmlns:metro="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
              xmlns:local="clr-namespace:FiscaliZi.MDFast.Views"
              mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300">
-    <Grid>
-        <Label Content="dIALOG motS" HorizontalAlignment="Left" Margin="54,112,0,0" VerticalAlignment="Top"/>
-    </Grid>
-</UserControl>
+             d:DesignHeight="300"
+             DataContext="{Binding DialogVM, Source={StaticResource Locator}}" Width="625.751">
+
+    <dialogs:CustomDialog.Content>
+        <StackPanel Margin="-119,0,-93,0">
+            <TextBlock Text="Selecione um motorista"
+                       TextAlignment="Center" />
+            <TextBox Text="{Binding DialogMessage,
+                                    Mode=TwoWay,
+                                    UpdateSourceTrigger=PropertyChanged}"
+                     metro:TextBoxHelper.Watermark="Add Message Here" />
+            <DataGrid x:Name="dgMotoristas" ItemsSource="{Binding Mots}" 
+                              AutoGenerateColumns="False" CanUserAddRows="False" 
+                              MinHeight="100" 
+                              HorizontalContentAlignment="Stretch"  
+                              Background="{x:Null}"
+                              FontSize="12">
+                <DataGrid.Columns>
+                    <DataGridCheckBoxColumn 
+                        Binding="{Binding RelativeSource={RelativeSource AncestorType=DataGridRow}, Path=IsSelected, Mode=OneWay}"
+                        EditingElementStyle="{DynamicResource MetroDataGridCheckBox}"
+                        ElementStyle="{DynamicResource MetroDataGridCheckBox}"
+                        Header="Sel" />
+
+                    <DataGridTextColumn Header="NOME" SortMemberPath="Nome" Binding="{Binding Nome}"/>
+                    <DataGridTextColumn Header="CPF" SortMemberPath="CPF" Binding="{Binding CPF}" />
+
+                </DataGrid.Columns>
+            </DataGrid>
+        </StackPanel>
+    </dialogs:CustomDialog.Content>
+    <dialogs:CustomDialog.DialogBottom>
+        <Button Command="{Binding SendMessageCommand}"
+                Content="Send Message"
+                DockPanel.Dock="Top" />
+    </dialogs:CustomDialog.DialogBottom>
+</dialogs:CustomDialog>
